--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "moment": "^2.22.2",
     "react": "16.5.0",
     "react-native": "0.57.0",
     "react-native-navigation": "^2.0.2556",
