--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,7 @@
 {
-  "presets": ["module:metro-react-native-babel-preset"],
+  "presets": [
+    "module:metro-react-native-babel-preset",
+    "module:react-native-dotenv",
+  ],
   "plugins": ["@babel/plugin-transform-async-to-generator"],
 }
