--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "moment": "^2.22.2",
     "react": "16.5.0",
     "react-native": "0.57.0",
+    "react-native-dotenv": "^0.2.0",
     "react-native-navigation": "^2.0.2556",
     "react-native-swipeout": "^2.3.6",
     "react-xml-parser": "^1.0.8"
