--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react": "16.5.0",
     "react-native": "0.57.0",
     "react-native-dotenv": "^0.2.0",
+    "react-native-geocoder": "^0.5.0",
+    "react-native-maps": "^0.22.1",
     "react-native-navigation": "^2.0.2556",
     "react-native-swipeout": "^2.3.6",
     "react-xml-parser": "^1.0.8"
